[workspace]
members=[
    "imkey-core/api",
    "imkey-core/common",
    "imkey-core/device",
    "imkey-core/proto",
    "imkey-core/transport",
    "imkey-core/wallet/coin-bitcoin",
    "imkey-core/wallet/coin-ethereum",
    "imkey-core/wallet/coin-eos",
    "imkey-core/wallet/coin-cosmos",
    "imkey-core/wallet/coin-ckb",
    "imkey-core/wallet/coin-substrate",
    "imkey-core/wallet/coin-tron",
    "imkey-core/wallet/coin-tezos",
    "imkey-core/wallet/coin-bch",
    "imkey-core/wallet/coin-filecoin",
    "imkey-core/wallet/coin-btc-fork",
    "token-core/tcx-proto",
    "token-core/tcx-constants",
    "token-core/tcx-primitive",
    "token-core/tcx-crypto",
    "token-core/tcx-chain",
    "token-core/tcx-tron",
    "token-core/tcx-btc-fork",
    "token-core/tcx-bch",
    "token-core/tcx-ckb",
    "token-core/tcx-substrate",
    "token-core/tcx-filecoin",
    "token-core/tcx",
    "token-core/tcx-tezos",
    "token-core/tcx-tester",
]
